--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,8 +78,8 @@
 /*------------------- 1.2. Function -------------------*/
 /*------------------- 1.3. Variable-------------------*/
 :root {
-  --theme-color: #C78665;
-  --title-color: #666861;
+  --theme-color: #a17c6c;
+  --title-color: #105253;
   --body-color: #84847c;
   --smoke-color: #F8F7F4;
   --smoke-color2: #FFF4EF;
@@ -2292,7 +2292,7 @@ textarea.is-invalid {
   color: var(--white-color);
 }
 .btn.style3 {
-  border: 1px solid #4B4D49;
+  border: 1px solid #a17c6c;
   background: transparent;
   color: var(--white-color);
 }
@@ -2984,10 +2984,10 @@ textarea.is-invalid {
   font-size: 16px;
   background: transparent;
   color: var(--white-color);
-  border-color: #4B4D49;
+  border-color: #a17c6c;
 }
 .social-btn.style4 a:hover {
-  background: #4B4D49;
+  background: #003334;
 }
 .social-btn.color-theme a {
   color: var(--body-color);
@@ -5843,7 +5843,7 @@ ul.wp-block-latest-posts li:last-child {
 }
 .header-layout2 .header-top {
   padding: 17px 109px;
-  border-bottom: 1px solid #4B4D49;
+  border-bottom: 1px solid #a17c6c;
 }
 .header-layout2 .sidebar-btn {
   color: var(--white-color);
@@ -5853,7 +5853,7 @@ ul.wp-block-latest-posts li:last-child {
 }
 .header-layout2 .sticky-wrapper {
   padding: 0px 109px;
-  border-bottom: 1px solid #4B4D49;
+  border-bottom: 1px solid #a17c6c;
 }
 .header-layout2 .sticky-wrapper .header-logo {
   display: none;
@@ -5875,7 +5875,7 @@ ul.wp-block-latest-posts li:last-child {
   background: var(--white-color);
 }
 .header-layout2 .sticky-wrapper.sticky {
-  background: #4B4D49;
+  background: #003334;
 }
 .header-layout2 .sticky-wrapper.sticky .header-logo {
   display: block;
@@ -6263,7 +6263,7 @@ ul.wp-block-latest-posts li:last-child {
   color: var(--theme-color);
 }
 .footer-layout3 .footer-bottom {
-  border-top: 1px solid #4B4D49;
+  border-top: 1px solid #a17c6c;
 }
 .footer-layout3 .footer-bottom .social-btn {
   display: none;
@@ -6283,7 +6283,7 @@ ul.wp-block-latest-posts li:last-child {
   padding: 38px 30px;
 }
 .footer-layout3 .footer-bottom .social-link a:not(:last-child) {
-  border-right: 1px solid #4B4D49;
+  border-right: 1px solid #a17c6c;
 }
 .footer-layout3 .footer-bottom .social-link a:before, .footer-layout3 .footer-bottom .social-link a:after {
   border-top: 49px solid var(--title-color);
@@ -6293,7 +6293,7 @@ ul.wp-block-latest-posts li:last-child {
   padding: 0px 40px 0px 410px;
 }
 .footer-layout3.style2 .copyright-wrap {
-  border-top: 1px solid #4B4D49;
+  border-top: 1px solid #a17c6c;
 }
 .footer-layout3.style2 .copyright-wrap .copyright-text {
   margin-bottom: 0;
@@ -7924,7 +7924,7 @@ li.trackback {
 /* Hero 2 ---------------------------------- */
 .hero-2 {
   padding-top: 175px;
-  border-bottom: 1px solid #4B4D49;
+  border-bottom: 1px solid #a17c6c;
 }
 .hero-2 .hero-thumb2-3 {
   position: absolute;
@@ -10694,7 +10694,7 @@ span.select2-selection.select2-selection--single:focus {
 
 .marquee-wrap {
   overflow: hidden;
-  border-top: 1px solid #4B4D49;
+  border-top: 1px solid #a17c6c;
   padding: 21px 0;
   max-width: 1920px;
 }
